--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src --max-warnings=0"
-  },
-  "husky":{
-    "hooks":{
-      "pre-commit": "lint-staged"
-    }
+    "lint": "eslint src --max-warnings=0",
+    "prepare": "husky install"
   },
   "lint-staged": {
-    "src/**/*": ["yarn lint --fix"]
+    "src/**/*": [
+      "yarn lint --fix"
+    ]
   },
   "dependencies": {
     "next": "10.1.3",
