boilertplate/fix storybook - use controls and essential addons

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
         "react-hooks/exhaustive-deps": "warn",
         "react/react-in-jsx-scope": "off",
         "@typescript-eslint/explicit-module-boundary-types": "off",
-        "prettier/prettier": "error"
+        "prettier/prettier": "error",
+        "react/prop-types":0
     }
 }
